# data_interpolation

./: CMakeLists.txt  Untitled Diagram.drawio  main.cpp
Interpolation/: Derivative.h  Interpolation.cpp  Interpolation.h
